<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ui.activities.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:layout_marginHorizontal="@dimen/_60sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <TextView
        android:id="@+id/headerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:text="Al-Shafi MedLedger"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:textSize="26sp"
        android:textStyle="bold"
        android:letterSpacing="0.02"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginVertical="12dp"
        android:layout_marginStart="40dp"
        android:fontFamily="@font/inter"
        android:text="@string/login_to_your_account"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/headerTextView"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@id/headerTextView" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomOutlinedTextInputLayout"
        android:hint="@string/email"
        android:layout_marginTop="43dp"
        android:layout_marginHorizontal="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/infoTextView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginIdText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CustomTextInputEditText"
            android:inputType="text"
            android:padding="20dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CustomOutlinedTextInputLayout"
        android:hint="@string/password"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CustomTextInputEditText"
            android:inputType="textPassword"
            android:padding="20dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dividerColor"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="38dp"
        app:layout_constraintTop_toBottomOf="@id/forgotPass_TV"
        app:layout_constraintStart_toStartOf="@id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="@id/textInputLayout2"
        app:layout_constraintBottom_toTopOf="@id/buttonLogin"/>

    <FrameLayout
        android:id="@+id/loadingOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="4dp"/>

    </FrameLayout>

    <TextView
        android:id="@+id/forgotPass_TV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary"
        android:visibility="visible"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="@id/textInputLayout2"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        app:elevation="2dp"
        android:stateListAnimator="@animator/button_elevation"
        android:padding="@dimen/_12sdp"
        android:text="@string/log_in"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        app:cornerRadius="@dimen/_25sdp"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <TextView
        android:id="@+id/or"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:visibility="gone"
        android:textSize="17sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        app:layout_constraintStart_toStartOf="@id/buttonLogin"
        app:layout_constraintEnd_toEndOf="@id/buttonLogin"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/googleLoginBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        app:elevation="2dp"
        android:visibility="gone"
        android:stateListAnimator="@animator/button_elevation"
        android:padding="@dimen/_18sdp"
        android:text="@string/continue_with_google"
        android:textSize="16sp"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/google_ic"
        app:cornerRadius="@dimen/_25sdp"
        app:layout_constraintEnd_toEndOf="@id/buttonLogin"
        app:layout_constraintStart_toStartOf="@id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@id/or" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="23dp" />

    <TextView
        android:id="@+id/textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin"
        android:text="@string/don_t_you_have_account"/>

    <TextView
        android:id="@+id/signUp_TV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/sign_up"
        android:layout_marginStart="@dimen/_5sdp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/textview"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>