<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ui.activities.RegisterActivity">


    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_ic"
        android:padding="8dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/colorPrimary" />

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginVertical="12dp"
        android:fontFamily="@font/inter"
        android:text="@string/sign_up_to_make_your_account"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <TextView
        android:id="@+id/infoTextView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/inter"
        android:text="@string/let_s_do_a_quick_signup_to_make_your_account"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/infoTextView"
        app:layout_constraintTop_toBottomOf="@id/infoTextView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@id/infoTextView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CustomOutlinedTextInputLayout"
                android:hint="@string/name"
                android:layout_marginHorizontal="35dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginIdText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextInputEditText"
                    android:inputType="text"
                    android:padding="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CustomOutlinedTextInputLayout"
                android:hint="@string/email"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="@dimen/_16sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextInputEditText"
                    android:inputType="textEmailAddress"
                    android:padding="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CustomOutlinedTextInputLayout"
                android:hint="@string/password"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="@dimen/_16sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextInputEditText"
                    android:inputType="textPassword"
                    android:padding="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CustomOutlinedTextInputLayout"
                android:hint="@string/phone_number"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="@dimen/_16sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextInputEditText"
                    android:inputType="textPhonetic"
                    android:padding="20dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CustomOutlinedTextInputLayout"
                android:hint="@string/address"
                android:layout_marginHorizontal="35dp"
                android:layout_marginTop="@dimen/_16sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout4">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CustomTextInputEditText"
                    android:inputType="textMultiLine"
                    android:padding="20dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividerColor"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="38dp"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout6"
                app:layout_constraintStart_toStartOf="@id/textInputLayout6"
                app:layout_constraintEnd_toEndOf="@id/textInputLayout6"
                app:layout_constraintBottom_toTopOf="@id/button_SignUp"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_SignUp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                app:elevation="8dp"
                android:stateListAnimator="@animator/button_elevation"
                android:padding="@dimen/_18sdp"
                android:text="@string/sign_up"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                app:cornerRadius="@dimen/_25sdp"
                app:layout_constraintEnd_toEndOf="@id/view"
                app:layout_constraintStart_toStartOf="@id/view"
                app:layout_constraintTop_toBottomOf="@id/view" />

            <TextView
                android:id="@+id/textview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="15dp"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/button_SignUp"
                app:layout_constraintTop_toBottomOf="@id/button_SignUp"
                android:text="@string/already_have_an_account"/>

            <TextView
                android:id="@+id/loginTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/textview"
                android:layout_marginStart="4dp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@id/button_SignUp"
                android:textColor="@color/colorPrimary"
                android:text="@string/log_in"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>